Fixed layout problems

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,18 @@
  *= require_tree .
  *= require_self
  */
+
+/* Move down content because we have a fixed navbar that is 50px tall */
+body {
+    padding-top: 50px;
+    padding-bottom: 20px;
+}
+
+/* Override Rail's default error calls with Bootstrap 3 */
+.field_with_errors {
+@extend .has-error;
+}
+
+.jumbotron p {
+    line-height: 120%;
+}
